@@ -51,8 +51,10 @@ class Combat_schedule : public Schedule
 	int max_reach;			// Max. weapon reach in tiles.
 	unsigned char yelled;		// Yell when first opponent targeted.
 	int failures;			// # failures to find opponent.
+#if 0	/* ++++Going away. */
 					// Find monsters, opponents.
 	void find_monsters(Chunk_object_list *chunk);
+#endif
 	void find_opponents();
 	Actor *find_foe(int mode);	// Find a new opponent.
 	Actor *find_foe();
